Inventory add and update
structure finalized
